add: added header section.

--- a/index.html
+++ b/index.html
@@ -126,5 +126,44 @@
         </div>
       </div>
     </nav>
+    <!-- Header -->
+    <header id="header">
+      <div class="container">
+        <div class="row row-gap-5 align-items-center">
+          <div class="col-md-6 col-lg-6">
+            <div class="header-content">
+              <h1 class="text-white">
+                Handcrafted Web Template For Business and Startups
+              </h1>
+              <p class="text-white my-3">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab
+                dolores ea fugiat nesciunt quisquam.
+              </p>
+              <div class="header-buttons">
+                <a
+                  class="text-decoration-none border rounded-2 d-inline-block"
+                  href="#"
+                  >GET STARTED</a
+                >
+                <a
+                  class="text-decoration-none border rounded-2 d-inline-block"
+                  href="#"
+                  >CONTACT US</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-6">
+            <div class="header-image">
+              <img
+                class="img-fluid"
+                src="./assets/pictures/intro.png"
+                alt="intro"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
