add: added about section.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                   <a class="text-decoration-none text-white" href="#">Home</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none text-white" href="#">About</a>
+                  <a class="text-decoration-none text-white" href="#about"
+                    >About</a
+                  >
                 </li>
                 <li>
                   <a class="text-decoration-none text-white" href="#"
@@ -99,7 +101,7 @@
               <a class="text-decoration-none text-white" href="#">Home</a>
             </li>
             <li>
-              <a class="text-decoration-none text-white" href="#">About</a>
+              <a class="text-decoration-none text-white" href="#about">About</a>
             </li>
             <li>
               <a class="text-decoration-none text-white" href="#">Services</a>
@@ -165,5 +167,47 @@
         </div>
       </div>
     </header>
+    <!-- Main -->
+    <main id="main">
+      <!-- About -->
+      <section id="about" class="py-5">
+        <div class="container">
+          <div class="row justify-content-center row-gap-4">
+            <div class="col-md-6 col-lg-4">
+              <div class="about-item text-center border p-4">
+                <i class="fa-brands fa-bootstrap fa-2x p-4 rounded-circle"></i>
+                <h3>Bootstrap 4</h3>
+                <p class="text-secondary">
+                  Share processes and data secure lona need to know basis Our
+                  team assured your web site is always safe.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <div class="about-item text-center border p-4">
+                <i
+                  class="fa-solid fa-paint-roller fa-2x p-4 rounded-circle"
+                ></i>
+                <h3>Slick Design</h3>
+                <p class="text-secondary">
+                  Share processes and data secure lona need to know basis Our
+                  team assured your web site is always safe.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <div class="about-item text-center border p-4">
+                <i class="fa-solid fa-heart fa-2x p-4 rounded-circle"></i>
+                <h3>Crafted with Love</h3>
+                <p class="text-secondary">
+                  Share processes and data secure lona need to know basis Our
+                  team assured your web site is always safe.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
