add: added craft section.

--- a/index.html
+++ b/index.html
@@ -208,6 +208,38 @@
           </div>
         </div>
       </section>
+      <!-- Craft -->
+      <section id="craft" class="py-5">
+        <div class="container">
+          <div class="row align-items-center row-gap-5">
+            <div class="col-md-6 col-lg-6">
+              <div class="craft-image">
+                <img
+                  class="img-fluid"
+                  src="./assets/pictures/business-img.png"
+                  alt="business"
+                />
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-6">
+              <div class="craft-content">
+                <h2 class="fw-bold">
+                  Crafted For Business, Startup and Agency Websites
+                </h2>
+                <p class="text-secondary">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                  ad minim veniam, quis nostrud exercitation ullamco laboris
+                  nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                  in reprehenderit in voluptate velit esse cillum dolore eu
+                  fugiat nulla pariatur.
+                </p>
+                <a class="text-decoration-none" href="#">DOWNLOAD</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
