--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                   >
                 </li>
                 <li>
-                  <a class="text-decoration-none text-white" href="#"
+                  <a class="text-decoration-none text-white" href="#services"
                     >Services</a
                   >
                 </li>
                 <li>
-                  <a class="text-decoration-none text-white" href="#"
+                  <a class="text-decoration-none text-white" href="#showcase"
                     >Showcase</a
                   >
                 </li>
@@ -104,10 +104,14 @@
               <a class="text-decoration-none text-white" href="#about">About</a>
             </li>
             <li>
-              <a class="text-decoration-none text-white" href="#">Services</a>
+              <a class="text-decoration-none text-white" href="#services"
+                >Services</a
+              >
             </li>
             <li>
-              <a class="text-decoration-none text-white" href="#">Showcase</a>
+              <a class="text-decoration-none text-white" href="#showcase"
+                >Showcase</a
+              >
             </li>
             <li>
               <a class="text-decoration-none text-white" href="#">Pricing</a>
@@ -235,6 +239,233 @@
                   fugiat nulla pariatur.
                 </p>
                 <a class="text-decoration-none" href="#">DOWNLOAD</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Services -->
+      <section id="services" class="py-5">
+        <div class="container">
+          <h2 class="service-header text-center fw-bold">
+            Services We Provide
+          </h2>
+          <p class="service-content text-center">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore.
+          </p>
+          <div class="row">
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 p-0">
+              <div
+                class="feature d-flex align-items-center column-gap-4 border p-3 bg-white"
+              >
+                <div class="feature-icon">
+                  <i class="fa-solid fa-mug-hot fa-2x p-4 rounded-circle"></i>
+                </div>
+                <div class="feature-info">
+                  <h4 class="fw-bold">Easy to Customize</h4>
+                  <p class="text-secondary">
+                    Easy to Customize Producing long lasting organic SEO results
+                    for brand of different kinds for more than a decade, we
+                    understand that’s your.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 p-0">
+              <div
+                class="feature d-flex align-items-center column-gap-4 border p-3 bg-white"
+              >
+                <div class="feature-icon">
+                  <i class="fa-solid fa-briefcase fa-2x p-4 rounded-circle"></i>
+                </div>
+                <div class="feature-info">
+                  <h4 class="fw-bold">Business Template</h4>
+                  <p class="text-secondary">
+                    Easy to Customize Producing long lasting organic SEO results
+                    for brand of different kinds for more than a decade, we
+                    understand that’s your.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 p-0">
+              <div
+                class="feature d-flex align-items-center column-gap-4 border p-3 bg-white"
+              >
+                <div class="feature-icon">
+                  <i class="fa-solid fa-lightbulb fa-2x p-4 rounded-circle"></i>
+                </div>
+                <div class="feature-info">
+                  <h4 class="fw-bold">Clean & Trendy Design</h4>
+                  <p class="text-secondary">
+                    Easy to Customize Producing long lasting organic SEO results
+                    for brand of different kinds for more than a decade, we
+                    understand that’s your.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 p-0">
+              <div
+                class="feature d-flex align-items-center column-gap-4 border p-3 bg-white"
+              >
+                <div class="feature-icon">
+                  <i
+                    class="fa-solid fa-layer-group fa-2x p-4 rounded-circle"
+                  ></i>
+                </div>
+                <div class="feature-info">
+                  <h4 class="fw-bold">Tons of Sections</h4>
+                  <p class="text-secondary">
+                    Easy to Customize Producing long lasting organic SEO results
+                    for brand of different kinds for more than a decade, we
+                    understand that’s your.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 p-0">
+              <div
+                class="feature d-flex align-items-center column-gap-4 border p-3 bg-white"
+              >
+                <div class="feature-icon">
+                  <i class="fa-solid fa-refresh fa-2x p-4 rounded-circle"></i>
+                </div>
+                <div class="feature-info">
+                  <h4 class="fw-bold">Free Future Updates</h4>
+                  <p class="text-secondary">
+                    Easy to Customize Producing long lasting organic SEO results
+                    for brand of different kinds for more than a decade, we
+                    understand that’s your.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 p-0">
+              <div
+                class="feature d-flex align-items-center column-gap-4 border p-3 bg-white"
+              >
+                <div class="feature-icon">
+                  <i class="fa-solid fa-message fa-2x p-4 rounded-circle"></i>
+                </div>
+                <div class="feature-info">
+                  <h4 class="fw-bold">Premier Support</h4>
+                  <p class="text-secondary">
+                    Easy to Customize Producing long lasting organic SEO results
+                    for brand of different kinds for more than a decade, we
+                    understand that’s your.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Showcase -->
+      <section id="showcase" class="py-5">
+        <div class="container">
+          <h2 class="showcase-header text-center text-white fw-bold">
+            Recent Works
+          </h2>
+          <p class="content text-center text-white">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore.
+          </p>
+          <div class="row justify-content-center row-gap-4">
+            <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+              <div class="showcase-item position-relative">
+                <img
+                  class="img-fluid w-100"
+                  src="./assets/pictures/01.jpg"
+                  alt="work1"
+                />
+                <div
+                  class="layer text-center position-absolute d-flex flex-column justify-content-center"
+                >
+                  <h6 class="text-white fst-italic">Icon , Web</h6>
+                  <h4 class="text-white">Redesign Slack</h4>
+                  <div class="icons d-flex justify-content-center column-gap-3">
+                    <i class="fa-solid fa-search text-white"></i>
+                    <i class="fa-solid fa-link text-white"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+              <div class="showcase-item position-relative">
+                <img
+                  class="img-fluid w-100"
+                  src="./assets/pictures/02.jpg"
+                  alt="work1"
+                />
+                <div
+                  class="layer text-center position-absolute d-flex flex-column justify-content-center"
+                >
+                  <h6 class="text-white fst-italic">Icon , Web</h6>
+                  <h4 class="text-white">Redesign Slack</h4>
+                  <div class="icons d-flex justify-content-center column-gap-3">
+                    <i class="fa-solid fa-search text-white"></i>
+                    <i class="fa-solid fa-link text-white"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+              <div class="showcase-item position-relative">
+                <img
+                  class="img-fluid w-100"
+                  src="./assets/pictures/03.jpg"
+                  alt="work1"
+                />
+                <div
+                  class="layer text-center position-absolute d-flex flex-column justify-content-center"
+                >
+                  <h6 class="text-white fst-italic">Icon , Web</h6>
+                  <h4 class="text-white">Redesign Slack</h4>
+                  <div class="icons d-flex justify-content-center column-gap-3">
+                    <i class="fa-solid fa-search text-white"></i>
+                    <i class="fa-solid fa-link text-white"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+              <div class="showcase-item position-relative">
+                <img
+                  class="img-fluid w-100"
+                  src="./assets/pictures/04.jpg"
+                  alt="work1"
+                />
+                <div
+                  class="layer text-center position-absolute d-flex flex-column justify-content-center"
+                >
+                  <h6 class="text-white fst-italic">Icon , Web</h6>
+                  <h4 class="text-white">Redesign Slack</h4>
+                  <div class="icons d-flex justify-content-center column-gap-3">
+                    <i class="fa-solid fa-search text-white"></i>
+                    <i class="fa-solid fa-link text-white"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+              <div class="showcase-item position-relative">
+                <img
+                  class="img-fluid w-100"
+                  src="./assets/pictures/05.jpg"
+                  alt="work1"
+                />
+                <div
+                  class="layer text-center position-absolute d-flex flex-column justify-content-center"
+                >
+                  <h6 class="text-white fst-italic">Icon , Web</h6>
+                  <h4 class="text-white">Redesign Slack</h4>
+                  <div class="icons d-flex justify-content-center column-gap-3">
+                    <i class="fa-solid fa-search text-white"></i>
+                    <i class="fa-solid fa-link text-white"></i>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
