add: added plans section.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   >
                 </li>
                 <li>
-                  <a class="text-decoration-none text-white" href="#"
+                  <a class="text-decoration-none text-white" href="#plans"
                     >Pricing</a
                   >
                 </li>
@@ -114,7 +114,9 @@
               >
             </li>
             <li>
-              <a class="text-decoration-none text-white" href="#">Pricing</a>
+              <a class="text-decoration-none text-white" href="#plans"
+                >Pricing</a
+              >
             </li>
             <li>
               <a class="text-decoration-none text-white" href="#">Team</a>
@@ -466,6 +468,75 @@
                     <i class="fa-solid fa-link text-white"></i>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Plans -->
+      <section id="plans" class="py-5">
+        <div class="container">
+          <h2 class="plans-header text-center">Pricing Plans</h2>
+          <p class="plans-content text-center">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore.
+          </p>
+          <div class="row justify-content-center row-gap-4">
+            <div class="col-sm-6 col-md-4 col-lg-4">
+              <div class="plan text-center border py-4">
+                <h4 class="plan-header">FREE</h4>
+                <h2 class="price"><sup>$</sup> 00</h2>
+                <ul class="feautures list-unstyled text-secondary">
+                  <li>Free Instalation</li>
+                  <li>500MB Storage</li>
+                  <li>Single User</li>
+                  <li>5 GB Bandwith</li>
+                  <li>Minimal Features</li>
+                  <li>No Dashboard</li>
+                </ul>
+                <a
+                  class="text-decoration-none border fw-bold d-inline-block"
+                  href="#"
+                  >PURCHASE</a
+                >
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-4">
+              <div class="plan text-center border py-4">
+                <h4 class="plan-header">STANDART</h4>
+                <h2 class="price"><sup>$</sup> 19.99</h2>
+                <ul class="feautures list-unstyled text-secondary">
+                  <li>Free Instalation</li>
+                  <li>2 GB Storage</li>
+                  <li>Upto 2 users</li>
+                  <li>50 GB Bandwith</li>
+                  <li>All Features</li>
+                  <li>Sales Dashboard</li>
+                </ul>
+                <a
+                  class="text-decoration-none border fw-bold d-inline-block second"
+                  href="#"
+                  >PURCHASE</a
+                >
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-4">
+              <div class="plan text-center border py-4">
+                <h4 class="plan-header">Business</h4>
+                <h2 class="price"><sup>$</sup> 29.99</h2>
+                <ul class="feautures list-unstyled text-secondary">
+                  <li>Free Instalation</li>
+                  <li>5 GB Storage</li>
+                  <li>Upto 4 users</li>
+                  <li>100 GB Bandwith</li>
+                  <li>Minimal Features</li>
+                  <li>No Dashboard</li>
+                </ul>
+                <a
+                  class="text-decoration-none border fw-bold d-inline-block"
+                  href="#"
+                  >PURCHASE</a
+                >
               </div>
             </div>
           </div>
